Fix vertical alignment of profile cover image

--- a/wonder/romeo/static/assets/app/profile/_profile-cover.scss
+++ b/wonder/romeo/static/assets/app/profile/_profile-cover.scss
@@ -6,7 +6,7 @@
   max-height: 180px;
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center top;
+  background-position: 50%;
   position: relative;
   opacity: 0;
 }
